# AESBenchmark

./: .gitignore  CMakeLists.txt  README.md  TODO.md  cpp_build.sh  pyenv_setup.sh
benchmark/: benchmark_AES.csv  benchmark_results.csv
file/: input.jpg_results.csv  output_encrypted.jpg_results.csv
include/: aes.h  aes_aesni.h  aes_aesni_int.h  aes_benchmark.h  aes_botan_wrapper.h  aes_constants.h  aes_fileio.h  aes_naive.h  aes_naive_int.h  aes_ttable.h  bench_aes.h  sha256.h
src/: aes.cpp  aes_aesni.cpp  aes_aesni_int.cpp  aes_benchmark.cpp  aes_botan_wrapper.cpp  aes_fileio.cpp  aes_naive.cpp  aes_naive_int.cpp  aes_ttable.cpp  bench_aes.cpp  main.cpp  plot_benchmark.py  sha256.cpp
test_vectors/: test_vectors_txt
